Update for Circuit Breaker Implementation.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,22 @@ spring.application.name=orderservice
 server.port=8082
 
 eureka.client.service-url.default-zone: http://localhost:8761/eureka/
+
+# Properties for circuit breaker
+# Percentage of failed calls to open the circuit (e.g., 50%)
+resilience4j.circuitbreaker.instances.productservice.failureRateThreshold=50
+# Time in milliseconds the circuit stays open (e.g., 5 seconds)
+resilience4j.circuitbreaker.instances.productservice.waitDurationInOpenState=5000
+
+# Minimum calls before the failure rate is calculated
+resilience4j.circuitbreaker.instances.productservice.minimumNumberOfCalls=5
+# Automatically move to half-open state after wait duration
+resilience4j.circuitbreaker.instances.productservice.automaticTransitionFromOpenToHalfOpenEnabled=true
+
+# Number of test calls allowed in half-open state
+resilience4j.circuitbreaker.instances.productservice.permittedNumberOfCallsInHalfOpenState=3
+
+# Sliding window type: COUNT_BASED or TIME_BASED
+resilience4j.circuitbreaker.instances.productservice.slidingWindowType=COUNT_BASED
+# Number of calls or time in seconds based on the type
+resilience4j.circuitbreaker.instances.productservice.slidingWindowSize=10
